--- a/app/assets/stylesheets/vmachine_styles.css
+++ b/app/assets/stylesheets/vmachine_styles.css
@@ -893,13 +893,17 @@ textarea {
 select {
   width: 100%; }
 
+/* This section controls the mise-en-page of the home page. Other pages too? Move to app.css? */
 .row {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0;
+  margin-top: 225px;
   margin-bottom: 0;
   max-width: 62.5rem; }
+
+/* End here? -------------------------------------------------------------------------------- */
+
   .row:before, .row:after {
     content: " ";
     display: table; }
