add rajna ms image to T reader

--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -45,7 +45,7 @@
                 <%= @current_notes %>
             </div>
             <div id="ms-image-container" class="hidden">
-                <%= image_tag('kittens.jpg', id: 'ms-image', class: 'hidden', alt: 'Manuscript image') %>
+                <%= image_tag('rajna_1.jpg', id: 'ms-image', class: 'hidden', alt: 'Manuscript image') %>
             </div>
             <div id="tei-embed-container" class="hidden">
                 <div id="tei-embed-header"></div>
