change diplomatic to scribal

--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -24,7 +24,7 @@
                 <% end %>
                 <form id="diplo-form">
                 |
-                <label for="diploCheckbox" id="diplo-label"> Diplomatic</label>
+                <label for="diploCheckbox" id="diplo-label"> Scribal</label>
                 <input type="checkbox" name="diploCheckbox" id="diploCheckbox" style="display: inline;"> | </form>
 
                  <div id="image-reveal">MS Image</div>|
