--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -25,32 +25,39 @@
               <a href="http://www.unf.edu/~sschwam/">Shira Schwam-Baird</a>, Principal Investigator (University of North Florida)<br>
               <a href="https://wlu.academia.edu/StephenPatrickMcCormick">Stephen P. McCormick</a>, Principal Investigator (Washington and Lee University)</div>
 
-          <h5 id="sub-header">Collaborating Institutions</h5>
-
-            <div class="participant_section">
-              <a href="http://www.bibliotecaseminariopda.it/">Biblioteca del Seminario Vescovile di Padova (Padua, Italy)</a><br>
-              <a href="http://www.maru.firenze.sbn.it/">Biblioteca Marucelliana (Florence, Italy)</a><br>
-
           <h5 id="sub-header">Collaborating Scholars</h5>
 
-            <div class="participant_section"><a href="http://history.arizona.edu/alan-bernstein">Alan Bernstein</a> (University of Arizona)<br>
+            <div class="participant_section">
+              <a href="http://history.arizona.edu/alan-bernstein">Alan Bernstein</a> (University of Arizona)<br>
               <a href="http://ciham.ish-lyon.cnrs.fr/membres/jean-claude-vallecalle">Jean-Claude Vallecalle</a> (Université Lumière Lyon 2)<br>
               <a href="http://www.ed.ac.uk/literatures-languages-cultures/delc/french/staff/philip-bennett">Philip E. Bennett</a> (University of Edinburgh)<br>
               <a href="http://independent.academia.edu/MichelaGScattolini">Michela G. Scattolini</a> (Genoa, Italy; Independent researcher)</div>
 
+          <h5 id="sub-header">Collaborating Institutions</h5>
+
+            <div class="participant_section">
+              <a href="http://www.archiginnasio.it/">Biblioteca Comunale dell'Archiginnasio (Bologna, Italy)</a><br>
+              <a href="http://www.maru.firenze.sbn.it/">Biblioteca Marucelliana (Florence, Italy)</a><br>
+              <a href="http://www.bnto.librari.beniculturali.it/">Biblioteca Nazionale di Torino (Turin, Italy)</a><br>
+              <a href="http://www.bibliotecaseminariopda.it/">Biblioteca Antica del Seminario Vescovile di Padova (Padua, Italy)</a><br>
+            </div>
+
           <h5 id="sub-header">Digital Humanities Scholars</h5>
 
-            <div class="participant_section"><a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Wasington and Lee University)<br>
+            <div class="participant_section">
+              <a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Wasington and Lee University)<br>
               <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Wasington and Lee University)<br>
-              <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Wasington and Lee University)</div>
+              <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Wasington and Lee University)
+            </div>
 
           <h5 id="sub-header">Washington and Lee Student Researchers</h4>
 
-          <div class="participant_section">Natsumi Alvarez (Summer 2015) - TEI encoding and development<br>
-                    Dashiel Derricks (Fall 2015 - Winter 2016) - TEI encoding and development; Versioning Machine<br>
-                    Sarah Schaffer (Winter 2016) - Annotation prototyping<br>
-                    Abdurrafey Khan (Fall 2016 - Spring 2017) - Versioning Machine<br>
-        </div>
+            <div class="participant_section">Natsumi Alvarez (Summer 2015) - TEI encoding and development<br>
+              Dashiel Derricks (Fall 2015 - Winter 2016) - TEI encoding and development; Versioning Machine<br>
+              Sarah Schaffer (Winter 2016) - Annotation prototyping<br>
+              Abdurrafey Khan (Fall 2016 - Spring 2017) - Versioning Machine<br>
+            </div>
+
        <hr>
       </div>
     </section>
