--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,4 +3,5 @@
   <%= link_to( image_tag('neh_logo.png'), "https://www.neh.gov/" ) %>
   <%= link_to( image_tag('loyola_logo.svg'), "https://www.loyola.edu/" ) %>
   <%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/" ) %>
+  <%= link_to( image_tag('marucelliana_logo.png'), "http://www.maru.firenze.sbn.it/" ) %>
 </div>
