css update for praxis interface

--- a/app/assets/stylesheets/praxis.css
+++ b/app/assets/stylesheets/praxis.css
@@ -1,3 +1,4 @@
+/*
 body {
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -67,6 +68,8 @@ td {
     padding-top: 15px;
     padding-bottom: 15px;
 }
+
+/*
 
 /*td.1 {
     width: 30px;
