--- a/app/views/layouts/_praxis_interface.html.erb
+++ b/app/views/layouts/_praxis_interface.html.erb
@@ -2,62 +2,61 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <%= stylesheet_link_tag "praxis.css" %>
 
-<header class="row">
-  <!-- link to praxis.css; see header for html document -->
+<section class="praxispage">
 
-  <div class="large-12 columns text-center">
-  <h1 id="main-title">Edition Criteria for ___</h1>
+    <header class="praxispage">
+      <h1 id="main-title">Edition Criteria for ___</h1>
+    </header>
+
+    <body>
+
+      <h2><span>&#10081;</span> 1. Introduction</h2>
+
+      <h2><span>&#10081;</span> 2. Abbreviations</h2>
+
+          <p>Embed from html document.</p>
+
+      <div class="example">
+        <table>
+          Insert table here.
+        </table>
+      </div>
+
+      <h2><span>&#10081;</span> 3. Separation of Words</h2>
+
+      <h2><span>&#10081;</span> 4. Punctuation</h2>
+
+        <h3>4.1 Phonosyntactic Doubling</h3>
+
+          <p>Embed from HTML document.</p>
+
+      <h2><span>&#10081;</span> 5. Diacritical Signs</h2>
+
+        <h3>5.1 Cedilla</h3>
+
+          <p>Embed from HTML document.</p>
+
+        <h3>5.2 Acute Accent</h3>
+
+          <p>Embed from HTML document.</p>
+
+        <h3>5.3 Grave Accent</h3>
+
+          <p>Embed from HTML document.</p>
+
+      <h2><span>&#10081;</span> 6. Emendations</h2>
+
+          <p>Insert from HTML.</p>
+
+      <h2><span>&#10081;</span> 7. Language of Scribe</h2>
+
+          <p>Insert from HTML.</p>
+
+      <h2><span>&#10081;</span> 8. Specific Considerations & Difficulties</h2>
+
+    </body>
   </div>
-
-</header>
-
-<body>
-
-  <h2><span>&#10081;</span> 1. Introduction</h2>
-
-  <h2><span>&#10081;</span> 2. Abbreviations</h2>
-
-      <p>Embed from html document.</p>
-
-  <div class="example">
-    <table>
-      Insert table here.
-    </table>
-  </div>
-
-  <h2><span>&#10081;</span> 3. Separation of Words</h2>
-
-  <h2><span>&#10081;</span> 4. Punctuation</h2>
-
-    <h3>4.1 Phonosyntactic Doubling</h3>
-
-      <p>Embed from HTML document.</p>
-
-  <h2><span>&#10081;</span> 5. Diacritical Signs</h2>
-
-    <h3>5.1 Cedilla</h3>
-
-      <p>Embed from HTML document.</p>
-
-    <h3>5.2 Acute Accent</h3>
-
-      <p>Embed from HTML document.</p>
-
-    <h3>5.3 Grave Accent</h3>
-
-      <p>Embed from HTML document.</p>
-
-  <h2><span>&#10081;</span> 6. Emendations</h2>
-
-      <p>Insert from HTML.</p>
-
-  <h2><span>&#10081;</span> 7. Language of Scribe</h2>
-
-      <p>Insert from HTML.</p>
-
-  <h2><span>&#10081;</span> 8. Specific Considerations & Difficulties</h2>
-
-</body>
+</section>
 
 </html>
 
