lzm & ssb edits to b, t, translation-b; spm edit seg tag italic

--- a/app/views/layouts/_praxis_interface.html.erb
+++ b/app/views/layouts/_praxis_interface.html.erb
@@ -12,9 +12,11 @@
 
       <h2><span>&#10081;</span> 1. Introduction</h2>
 
+      <%= @gen_intro %>
+
       <h2><span>&#10081;</span> 2. Abbreviations</h2>
 
-          <%= @p %>
+      <%= @abbr %>
 
       <div class="example">
         <table>
