--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -84,40 +84,71 @@ header {
 
 /*Top bar*/
 
-.top-bar {
-  background: #000;
-  width:100%;
-  height: 48px;
+#nav {
+
+    list-style: none;
+    font-weight: bold;
+    margin-bottom: 10px;
+    width: 100%;
+    text-align: center;
+    background-color: #000000;
+    height:53px;
+    }
+
+#nav ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0;
+    width: 100%;
+    background-color: black;
 }
 
-nav {
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: gray;
+#nav li {
+    float: right;
+    border-left: 1px solid #bbb;
+    font-style: white;
 }
 
-.top-bar-section li:not(.has-form) a:not(.button){background: #000;}
-.top-bar-section li:not(.has-form) a:not(.button):hover {background: #000;}
-.top-bar-section li.active:not(.has-form) a:not(.button) {
-  background-color: #000;}
-.top-bar-section li.active:not(.has-form) a:not(.button):hover {
-    background-color: #000;}
-
-
-.top-bar a {
-  text-decoration: none;
-  font-size: 16px !important;
-  color:#cccccc !important;
+#nav li:last-child {
+    border-right: none;
 }
 
-.titleRow {
-  background-color: rgba(192,192,192,0.5);
-  padding-left: 15px;
+#nav li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    width: 150px;
 }
 
-section ul li a {
-    font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif !important;
+#nav li a:hover, .dropdown:hover {
+    background-color: gray;
 }
+
+#nav .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+#nav .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+#nav .dropdown-content a:hover {background-color: #f1f1f1}
+
+#nav .dropdown:hover .dropdown-content {
+    display: block;
+}
+
 
 /*Content */
 
