--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -11,8 +11,9 @@ img.initial {
 
 p.intro {
     font-weight: normal;
-    font-family: 'Open Sans', Arial, 'Liberation Sans', FreeSans, sans-serif;
     font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
 }
 
 /* --------------------------------------------------------------- */
@@ -37,8 +38,34 @@ p.intro {
   text-align:center; margin: 0 auto;
 }
 
+h1, h4, h5 {
+  color:#333;
+  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
+  margin-bottom:0;
+  text-align: center;
+}
+
 body {
-  font-family: 'Open Sans', Arial, 'Liberation Sans', FreeSans, sans-serif;
+  background: rgba(255,255,255,0.9);
+  color: #222;
+  padding: 0;
+  margin: 0;
+  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 25px;
+  position: relative;
+  cursor: auto; 
+  width: 100%;
+  max-width: 100%;
+  overflow-x:hidden;
+}
+
+/*
+body {
+  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
   background: rgba(255,255,255,0.9);
   text-rendering:optimizeLegibility;
   font-feature-settings: "kern" 1;
@@ -47,8 +74,12 @@ body {
   max-width: 100%;
   overflow-x:hidden;
   background-color: #fff;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
 
 }
+*/
 
 .large-offset-2 {
   margin-left: 10.66667% !important;
@@ -169,7 +200,7 @@ header {
 
 h1, h4, h5 {
   color:#333;
-  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif !important;
+  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
   margin-bottom:0;
   text-align: center;
 }
@@ -511,7 +542,7 @@ header{
   width: 69%;
 }
 
-td{
+td {
   padding-left:0;
   padding-right: 0;
   display: hidden;
