--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,7 +12,7 @@
           <%= link_to 'Padua (P)', p_manuscript_path() %> |
           <%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %> |
           <%= link_to 'Berlin Translation', b_translation_path() %> |
-          <%= link_to 'Hell Scene Comparison', hell_scene_path() %> |
+          <%= link_to 'Hell Scene Comparison', hell_scene_path() %> 
         </div>
         <hr>
         <h4 id="sub-header">Huon d'Auvergne Project Team</h4>
