--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -38,12 +38,70 @@ p.intro {
   text-align:center; margin: 0 auto;
 }
 
-h1, h4, h5 {
-  color:#333;
+/* Header styles */
+h1, h2, h3, h4, h5, h6 {
   font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
-  margin-bottom:0;
-  text-align: center;
+  font-weight: normal;
+  font-style: normal;
+  color: #222222;
+  text-rendering: optimizeLegibility;
+  margin-top: 0.2rem;
+  margin-bottom: 0.5rem;
+  line-height: 1.4; }
+
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
+    font-size: 60%;
+    color: #6f6f6f;
+    line-height: 0; }
+
+h1 {
+  font-size: 2.125rem; }
+
+h2 {
+  font-size: 1.6875rem; }
+
+h3 {
+  font-size: 1.375rem; }
+
+h4 {
+  font-size: 1.125rem; }
+
+h5 {
+  font-size: 1.125rem; }
+
+h6 {
+  font-size: 1rem; }
+
+header{
+  padding-top:3em;
+  padding-bottom: 4em;
+  margin-bottom: 1.5em;
 }
+
+#sub-header{
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+#editorial_staff{
+}
+
+.subheader {
+  line-height: 1.4;
+  color: #6f6f6f;
+  font-weight: normal;
+  margin-top: 0.2rem;
+  margin-bottom: 0.5rem; }
+
+hr {
+  border: solid #DDDDDD;
+  border-width: 1px 0 0;
+  clear: both;
+  margin: 1.25rem 0 1.1875rem;
+  height: 0; }
+
+/* HTML shell style */
 
 body {
   background: rgba(255,255,255,0.9);
@@ -63,24 +121,6 @@ body {
   overflow-x:hidden;
 }
 
-/*
-body {
-  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
-  background: rgba(255,255,255,0.9);
-  text-rendering:optimizeLegibility;
-  font-feature-settings: "kern" 1;
-  font-kerning:normal;
-  width: 100%;
-  max-width: 100%;
-  overflow-x:hidden;
-  background-color: #fff;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-
-}
-*/
-
 .large-offset-2 {
   margin-left: 10.66667% !important;
 }
@@ -96,21 +136,6 @@ section div ul li {
 #banner {
   padding-top:15px;
   padding-bottom: 15px;
-}
-
-header {
-  padding-top:3em;
-  padding-bottom: 4em;
-  margin-bottom: 1.5em;
-}
-
-#sub-header {
-  text-align: center;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-#editorial_staff {
 }
 
 /*Top bar*/
@@ -196,13 +221,6 @@ header {
 
 .participant_section{
   padding-bottom: 10px;
-}
-
-h1, h4, h5 {
-  color:#333;
-  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
-  margin-bottom:0;
-  text-align: center;
 }
 
 p.tagline {
