--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -40,7 +40,7 @@
     <div id="side-panel" class="hidden">
     <%= image_tag('closePanel.png', class: 'closePanel', id: 'note-close', alt: 'X') %>
         <div id="note-header" class="hidden">Notes</div>
-        <div id="image-header" class="hidden">Manuscript Image</div>
+        <!-- <div id="image-header" class="hidden">Manuscript Image</div> -->
             <div class="note-contents hidden">
                 <%= @current_notes %>
             </div>
