--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -1,5 +1,24 @@
 /* Homepage and HTML shell style */
 
+
+body {
+  background: rgba(255,255,255,0.9);
+  color: #222;
+  padding: 0;
+  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 25px;
+  position: relative;
+  cursor: auto; 
+  width: 100%;
+  max-width: 100%;
+  overflow-x:hidden;
+}
+
 img.initial {
     max-width: 29%;
     float: left;
@@ -16,23 +35,12 @@ p.intro {
     font-weight: 400;
 }
 
-body {
-  background: rgba(255,255,255,0.9);
-  color: #222;
-  padding: 0;
-  margin: 0;
-  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 25px;
-  position: relative;
-  cursor: auto; 
-  width: 100%;
-  max-width: 100%;
-  overflow-x:hidden;
-}
+hr {
+  border: solid #DDDDDD;
+  border-width: 1px 0 0;
+  clear: both;
+  margin: 1.25rem 0 1.1875rem;
+  height: 0; }
 
 .large-offset-2 {
   margin-left: 10.66667% !important;
@@ -54,7 +62,7 @@ section div ul li {
 
 /* Header styles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana, sans-serif !important;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   color: #222222;
@@ -108,12 +116,6 @@ header{
   margin-top: 0.2rem;
   margin-bottom: 0.5rem; }
 
-hr {
-  border: solid #DDDDDD;
-  border-width: 1px 0 0;
-  clear: both;
-  margin: 1.25rem 0 1.1875rem;
-  height: 0; }
 
 /*Top bar*/
 
@@ -746,13 +748,10 @@ sic {
 }
 
 #tei_wrapper{
-  margin-left: 150px;
-  width: 25% !important;
-  width: 30%;
-  height: 100%;
-  padding-bottom: 390px;
-  padding-top: 25px;
-  padding-left: 20px;
+  margin-left: 35px !important;
+  height: 100% !important;
+  padding-left: 20px !important;
+  padding-bottom: 140px !important;
 }
 
 
