SSB edits made 24 July 2017 & LZM added T laisse numbers through 125

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -866,11 +866,9 @@ ex[rend="angle"]::before{
 
 /*tags below don't work*/
 
-num[rend="smallcaps"]{
+num {
   font-variant: small-caps;
   color: green;
 }
 
-choice sic hi[rend="red-corr"]{
-  color: red;
-}
+
