--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -445,52 +445,52 @@ td{
   font-size: 11pt;
 }
 
-ex{
+ex {
   font-style: italic;
 }
 
-l sup{
+l sup {
   cursor: pointer;
   cursor:hand;
 }
 
-footnote{
+footnote {
   display:none;
 }
 
-.top-bar{
+.top-bar {
   position:fixed !important;
   z-index: 1000;
 }
 
-#TEI_left_panel{
+#TEI_left_panel {
   padding-top: 44px;
   height:100%;
 }
 
-header{
+header {
   padding-top: 92px !important;
 }
 
-#selected_laisse{
+#selected_laisse {
   display:inline;
 }
 
-.center-inner{
+.center-inner {
   margin-left: 8px;
   margin-right: 8px;
   padding-bottom: 20px
 }
 
 
-#num_laisses, #bot_reader{
+#num_laisses, #bot_reader {
   padding-right: 4px;
 }
 
-#note-header{
+#note-header {
 }
 
-#side-panel note{
+#side-panel note {
   display: none;
 }
 
@@ -613,11 +613,6 @@ td {
   padding-bottom: 22px;
 }
 
-.linenumber{
-  float: right;
-  margin-right: -50px;
-}
-
 #introduction {
     padding-top: 68px;
     height: 100%;
@@ -637,16 +632,16 @@ td {
 /* Top bar button navigation */
 
 #reader-nav {
-    width: 100%;
-    position: static;
-    z-index: 100;
-    padding-top: 10px;
-    background-color: rgba(245,246,246,1);
+  width: 100%;
+  position: static;
+  z-index: 100;
+  padding-top: 10px;
+  background-color: rgba(245,246,246,1);
 }
 
 #reader-nav-links{
   line-height: 2.8125rem;
-    padding: 0 0.9375rem;
+  padding: 0 0.9375rem;
 }
 
 #sub-title{
@@ -709,25 +704,44 @@ span.translation_missing {
 
 /* Reading Panel Style and Formatting */
 
-.line-heading{
+.line-heading {
   margin: 0 0 1em 0;
   font-size: 20pt;
   color: #a10d09;
 }
 
-.pb {
-  float: left;
-  color: #a10d09;
-  font-size: 11pt;
+.linenumber {
+  float: right;
+  margin-right: -50px;
 }
 
-.milestone{
+.milestone {
   margin-left: -100px;
 }
 
 num {
   font-variant: small-caps;
   color: indianred;
+}
+
+.anchor {
+  float: left;
+  margin-left: -150px;
+  color: #a10d09;
+}
+
+/* inserted code for anchor */
+/*anchor {
+  margin-left: -110px;
+  color: #a10d09;
+  font-size: 11pt; 
+}*/
+/* end anchor code */
+
+.pb {
+  float: left;
+  color: #a10d09;
+  font-size: 11pt;
 }
 
 seg {
