--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -20,19 +20,19 @@ body {
 }
 
 img.initial {
-    max-width: 29%;
-    float: left;
-    padding-right: 10px;
-    margin-top: -145px;
-    margin-left: -230px;
-    margin-bottom: -450px;
+  max-width: 29%;
+  float: left;
+  padding-right: 10px;
+  margin-top: -145px;
+  margin-left: -230px;
+  margin-bottom: -450px;
 }
 
 p.intro {
-    font-weight: normal;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
+  font-weight: normal;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
 }
 
 hr {
@@ -769,7 +769,7 @@ sic {
 #tei_wrapper{
   margin-left: 35px !important;
   height: 100% !important;
-  padding-left: 20px !important;
+  /*padding-left: 20px !important;*/
   padding-bottom: 140px !important;
 }
 
