test manuscript intro layout

--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -2,7 +2,7 @@
     <div class="large-8 large-offset-2 columns">
         <div id="introduction">
             <div id="title">
-                <%= @title %>
+                <%= @title %> TEST
             </div>
             <hr>
             <div id="introduction-text">
