--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,8 @@
+
+
 <!--start top bar nav-->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <body>
 
@@ -37,5 +39,5 @@
 
 
 </body>
-</html>
+</html> -->
   <!--end top bar nav-->
