--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -45,9 +45,9 @@
           <h5 id="sub-header">Digital Humanities Scholars</h5>
 
             <div class="participant_section">
-              <a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Wasington and Lee University)<br>
-              <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Wasington and Lee University)<br>
-              <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Wasington and Lee University)
+              <a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Washington and Lee University)<br>
+              <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Washington and Lee University)<br>
+              <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Washington and Lee University)
             </div>
 
           <h5 id="sub-header">Washington and Lee Student Researchers</h4>
