--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,7 +2,7 @@
 
 <!--start top bar nav-->
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <body>
 
@@ -39,5 +39,5 @@
 
 
 </body>
-</html> -->
+</html>
   <!--end top bar nav-->
