--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,40 @@
-<div class="footer">
-  <%= link_to( image_tag('dh_at_wandl.png'), "https://digitalhumanities.wlu.edu/") %>
-  <%= link_to( image_tag('neh_logo.png'), "https://www.neh.gov/" ) %>
-  <%= link_to( image_tag('loyola_logo.svg'), "https://www.loyola.edu/" ) %>
-  <%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/" ) %>
-  <%= link_to( image_tag('marucelliana_logo.png'), "http://www.maru.firenze.sbn.it/" ) %>
+<div class="container">
+
+	<div class="footer-row-1">
+		<div class="col-4">
+			<%= link_to( image_tag('dh_at_wandl.png'), "https://digitalhumanities.wlu.edu/") %>
+		</div>
+
+		<div class="col-4">
+			<%= link_to( image_tag('neh_logo.png'), "https://www.neh.gov/") %>
+		</div>
+
+	</div>
+
+	<div class="footer-row-2">
+		<div class="col-4">
+			<%= link_to( image_tag('loyola_logo.svg'), "https://www.loyola.edu/") %>
+		</div>
+
+		<div class="col-4">
+			<%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/") %>
+		</div>
+	</div>
+
+	<div class="footer-row-3">
+		<div class="col-4">
+			<%= link_to( image_tag('marucelliana_logo.png'), "http://www.maru.firenze.sbn.it/") %>
+		</div>
+	</div>
+
 </div>
+
+
+
+<!-- <div class="footer">
+  <%= link_to( image_tag('dh_at_wandl.png'), "https://digitalhumanities.wlu.edu/") %>
+  <%= link_to( image_tag('neh_logo.png'), "https://www.neh.gov/") %>
+  <%= link_to( image_tag('loyola_logo.svg'), "https://www.loyola.edu/") %>
+  <%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/") %>
+  <%= link_to( image_tag('marucelliana_logo.png'), "http://www.maru.firenze.sbn.it/") %>
+</div> -->
