--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -25,7 +25,7 @@
 <!-- Image Cell -->
     <div class="row">
         <div class="col-6">
-            <%= image_tag('rajna_1.jpg', id: 'ms-image', alt: 'Manuscript image') %>
+            <%= image_tag('t-120v.jpg', id: 'ms-image', alt: 'Manuscript image') %>
         </div>
 
 <!-- Introduction Cell -->
